fix: fix commit and add method updateDialoguesReceived
