# src/modules/chats/dto/requests/mark-dialogues-received.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsArray, IsNotEmpty, IsString } from 'class-validator';
+
+export class DialoguesReceivedDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    readonly publicKey!: string;
+
+    @ApiProperty({ type: [String] })
+    @IsArray()
+    @IsNotEmpty()
+    readonly chatIds!: string[];
+}
